--- a/src/cards/cards.css
+++ b/src/cards/cards.css
@@ -36,15 +36,48 @@
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
-    background-color: #4d869c;
+    background-color: #52057b;
 }
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-    color: #eef7ff;
+    color: #ffffff;
 }
 
 /* Style the back side */
 .flip-card-back {
     transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.logo-spin {
+    /* Add your logo styles here */
+    animation: spin 2.5s ease 1s infinite; /* Adjust duration and timing as needed */
+}
+
+@keyframes breathe {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.logo-breath {
+    animation: breathe 1s ease-in-out 1s infinite;
 }
